--- a/addons/sourcemod/configs/multicfg-dm.cfg
+++ b/addons/sourcemod/configs/multicfg-dm.cfg
@@ -3,6 +3,8 @@
 	"Config"
 	{
 		"Loop" "1"
+		"H3busCompatibility" "0" // 1 : for h3bus DM, 0 : for Max DM.
+		"CfgChange" "1" // 0: equip, 1: respawn, 2: restart, 3: nextround
 	}
 	"Game Modes"
 	{
